--- a/hooks/build
+++ b/hooks/build
@@ -3,18 +3,18 @@ set -ex
 
 # Python 3.6
 docker build \
-  --tag dnxsolutions/serverless-python:3.6 \
   --build-arg base_image=python:3.6-slim \
+  -t ${IMAGE_NAME} \
   .
 
 # Python 3.7
 docker build \
-  --tag dnxsolutions/serverless-python:3.7 \
   --build-arg base_image=python:3.7-slim \
+  -t ${IMAGE_NAME} \
   .
 
 # Python 3.8
 docker build \
-  --tag dnxsolutions/serverless-python:3.8 \
   --build-arg base_image=python:3.8-slim \
+  -t ${IMAGE_NAME} \
   .
