--- a/hooks/build
+++ b/hooks/build
@@ -4,17 +4,17 @@ set -ex
 # Python 3.6
 docker build \
   --build-arg base_image=python:3.6-slim \
-  -t ${IMAGE_NAME} \
+  -t ${IMAGE_NAME}:3.6-${DOCKER_TAG} \
   .
 
 # Python 3.7
 docker build \
   --build-arg base_image=python:3.7-slim \
-  -t ${IMAGE_NAME} \
+  -t ${IMAGE_NAME}:3.7-${DOCKER_TAG} \
   .
 
 # Python 3.8
 docker build \
   --build-arg base_image=python:3.8-slim \
-  -t ${IMAGE_NAME} \
+  -t ${IMAGE_NAME}:3.8-${DOCKER_TAG} \
   .
