--- a/hooks/build
+++ b/hooks/build
@@ -1,20 +1,33 @@
 #!/bin/bash
 set -ex
 
-# Python 3.6
-docker build \
-  --build-arg base_image=python:3.6-slim \
-  -t ${IMAGE_NAME}:3.6-${DOCKER_TAG} \
-  .
+if [ ${DOCKER_TAG} != "latest" ]
+then
+  echo "Build specific tag/release"
 
-# Python 3.7
-docker build \
-  --build-arg base_image=python:3.7-slim \
-  -t ${IMAGE_NAME}:3.7-${DOCKER_TAG} \
-  .
+  # Python 3.6
+  docker build \
+    --build-arg base_image=python:3.6-slim \
+    -t ${DOCKER_REPO}:3.6-${DOCKER_TAG} \
+    .
 
-# Python 3.8
-docker build \
-  --build-arg base_image=python:3.8-slim \
-  -t ${IMAGE_NAME}:3.8-${DOCKER_TAG} \
-  .
+  # Python 3.7
+  docker build \
+    --build-arg base_image=python:3.7-slim \
+    -t ${DOCKER_REPO}:3.7-${DOCKER_TAG} \
+    .
+
+  # Python 3.8
+  docker build \
+    --build-arg base_image=python:3.8-slim \
+    -t ${DOCKER_REPO}:3.8-${DOCKER_TAG} \
+    .
+else
+  echo "Build latest"
+
+  # Python 3.8
+  docker build \
+    --build-arg base_image=python:3.8-slim \
+    -t ${IMAGE_NAME} \
+    .
+fi
