--- a/3.7/Dockerfile
+++ b/3.7/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && \
         npm=5.8.0+ds6-4+deb10u1 && \
     pip3 install --upgrade pip==20.1.1 && \
     npm install npm@latest -g && \
-    npm install -g serverless && \
+    npm install -g serverless@1.72.0 && \
     apt-get -q -y clean && \
     rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
