--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -1,4 +1,4 @@
-name: Publish Docker image
+name: Build and Push Docker image
 
 on:
   push:
@@ -6,31 +6,58 @@ on:
       - '*'
 
 jobs:
-  push_to_ecr:
-    name: Push Docker image to ECR
+  build:
+    name: Build and Push
     runs-on: ubuntu-latest
-    container: dnxsolutions/aws:2.1.6-dnx1
     steps:
-      - name: Check out the repo
+      - name: Checkout
         uses: actions/checkout@v2
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ECR_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_ECR_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-      - name: Get the tag
-        id: get_tag
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/tags/}
-      - name: Build, tag, and push image to Amazon public ECR
+          images: |
+            dnxsolutions/serverless-python
+            ghcr.io/dnxlabs/serverless-python
+            public.ecr.aws/dnxsolutions/serverless-python
+          tags: |
+            type=raw,value=latest
+            type=ref,event=tag
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DNX_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DNX_DOCKERHUB_TOKEN }}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to Public ECR
+        uses: docker/login-action@v1
+        with:
+          registry: public.ecr.aws
+          username: ${{ secrets.AWS_ECR_ACCESS_KEY_ID }}
+          password: ${{ secrets.AWS_ECR_SECRET_ACCESS_KEY }}
         env:
-          ECR_REGISTRY: public.ecr.aws
-          ECR_REPOSITORY: v9i6s3d6/serverless-python
-          IMAGE_TAG: ${{ steps.get_tag.outputs.tag }}
-        run: |
-          apk add docker
-          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          AWS_REGION: us-east-1
+
+      - name: Build and Push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/mips64le, linus/ppc64le, linux/s390x, linux/arm/v5, linux/386, linux/arm64/v8, linux/arm/v7, linux/amd64
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
