--- a/3.8/Dockerfile
+++ b/3.8/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && \
         git=1:2.20.1-2+deb10u3 \
         nodejs=10.23.1~dfsg-1~deb10u1 \
         npm=5.8.0+ds6-4+deb10u2 && \
-    pip3 install --upgrade pip==20.1.1 && \
+    pip3 install --upgrade --no-cache-dir pip==20.1.1 && \
     npm install npm@latest -g && \
     npm install -g serverless@1.72.0 && \
     apt-get -q -y clean && \
