--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build the Docker image
-        run: docker build 3.8/ --file Dockerfile --tag dnxsolutions/serverless-python:latest
+        run: docker build . --file ./3.8/Dockerfile --tag dnxsolutions/serverless-python:latest
 
       - name: Scan image
         uses: anchore/scan-action@v3
