--- a/3.6/Dockerfile
+++ b/3.6/Dockerfile
@@ -2,15 +2,15 @@ FROM python:3.6-slim-buster
 
 RUN apt-get update && \
     apt-get install --no-install-recommends -y \
-        wget \
-        zip \
-        unzip \
-        git \
-        nodejs \
-        npm && \
+        wget=1.20.1-1.1 \
+        zip=3.0-11+b1 \
+        unzip=6.0-23+deb10u2 \
+        git=1:2.20.1-2+deb10u3 \
+        nodejs=10.24.0~dfsg-1~deb10u1 \
+        npm=5.8.0+ds6-4+deb10u2 && \
     pip3 install --upgrade pip==20.1.1 && \
     npm install npm@latest -g && \
-    npm install -g serverless@latest && \
+    npm install -g serverless@3.12.0 && \
     apt-get -q -y clean && \
     rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
