--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -26,11 +26,11 @@ jobs:
         env:
           ECR_REGISTRY: public.ecr.aws
           ECR_REPOSITORY: v9i6s3d6/serverless-python
-          IMAGE_TAG: ${{ steps.get_tag.outputs.tag }}
+          DOCKER_REPOSITORY: dnxsolutions/serverless-python
+          IMAGE_TAG: dnx-${{ steps.get_tag.outputs.tag }}
         run: |
           apk add docker
           aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          export REPO=$ECR_REGISTRY/$ECR_REPOSITORY
+          make build
+          make push
