Upgrading nodejs to version 14.1

--- a/3.6/Dockerfile
+++ b/3.6/Dockerfile
@@ -6,13 +6,17 @@ RUN apt-get update && \
         zip=3.0-11+b1 \
         unzip=6.0-23+deb10u2 \
         git=1:2.20.1-2+deb10u3 \
-        nodejs=10.24.0~dfsg-1~deb10u1 \
+        curl \
         npm=5.8.0+ds6-4+deb10u2 && \
     pip3 install --no-cache-dir --upgrade pip==20.1.1 && \
     npm install npm@latest -g && \
     npm install -g serverless@3.12.0 && \
     apt-get -q -y clean && \
     rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
+
+ARG APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=1
+RUN curl -sL https://deb.nodesource.com/setup_14.x | bash
+RUN apt-get install -y nodejs
 
 WORKDIR /work
 
