--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,3 +20,4 @@ jobs:
         HADOLINT_ACTION_DOCKERFILE_FOLDER: ./3.8
       with:
         ignore: 'DL3015,DL4006,DL3008'
+        no-fail: true
