--- a/3.10/Dockerfile
+++ b/3.10/Dockerfile
@@ -8,15 +8,15 @@ RUN apt-get update && \
         git=1:2.20.1-2+deb10u3 \
         curl \
         npm=5.8.0+ds6-4+deb10u2 && \
-    pip3 install --no-cache-dir --upgrade pip==22.1.2 && \
-    npm install npm@latest -g && \
-    npm install -g serverless@3.24.1 && \
+    pip3 install --no-cache-dir --upgrade pip==23.3.1 && \
+    npm install npm@7.0 -g && \
+    npm install -g serverless@3.36.0 && \
     npm install -g serverless-compose@2.4.0 &&\
     apt-get -q -y clean && \
     rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
 ARG APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=1
-RUN curl -sL https://deb.nodesource.com/setup_14.x | bash
+RUN curl -sL https://deb.nodesource.com/setup_16.x | bash -
 RUN apt-get install -y nodejs
 
 WORKDIR /work
